--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Fractioneater's Links</title>
   </head>
   <body>
     <h1>Fractioneater (@mushroom62)'s Links</h1>
     <p>More stuff will be added to here (I don't know how soon, though).</p>
-    <a href="https://scratch.mit.edu/users/mushroom62">My profile</a>
+    <a href="https://scratch.mit.edu/users/mushroom62">My profile</a><br>
     <a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a>
   </body>
 </html>
