--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Fractioneater (@mushroom62)'s Links</h1>
     <p>More stuff will be added to here (I don't know how soon, though).</p>
-    <a href="https://scratch.mit.edu/users/mushroom62">My profile</a><br>
+    <a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a><br>
     <a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a>
   </body>
 </html>
