--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Fractioneater's Links</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Fractioneater's Links</title>
+  <link href="/style.css" rel="stylesheet">
+</head>
+<body>
+  <div id="main">
     <h1>Fractioneater (@mushroom62)'s Links</h1>
     <p>More stuff will be added to here (I don't know how soon, though).</p>
-    <a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a><br>
+    <a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a>
     <a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a>
-  </body>
+  </div>
+</body>
 </html>
