--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <div id="main">
     <h1>Fractioneater (@mushroom62)'s Links</h1>
     <p>More stuff will be added to here (I don't know how soon, though).</p>
-    <a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a>
-    <a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a>
+    <ul>
+      <li><a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a></li>
+      <li><a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a></li>
+    </ul>
   </div>
 </body>
 </html>
