--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
   <div id="main">
-    <h1>Random Links</h1>
+    <h1>Basic Stuff</h1>
     <p>More stuff will be added to here (I don't know how soon, though).</p>
     <p>This is where I put games that can't be published on Scratch, or other random things.</p>
     <ul>
-      <li>
-        <a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a><p>(I am @mushroom62)</p>
-      </li>
+      <li><a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a></li>
       <li><a href="https://fractioneater.github.io/Battle-Bound">Battle Bound</a></li>
     </ul>
   </div>
