--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="main">
