--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p>More stuff will be added to here (I don't know how soon, though).</p>
     <p>This is where I put games that can't be published on Scratch, or other random things.</p>
     <ul>
-      <li><a href="https://scratch.mit.edu/users/mushroom62">My Scratch Profile</a></li>
+      <li><a href="https://scratch.mit.edu/users/fractioneater">My Scratch profile</a></li>
+      <li><a href="https://scratch.mit.edu/users/mushroom62">My old Scratch profile</a></li>
       <li><a href="https://fractioneater.github.io/battle-bound">Battle Bound</a></li>
     </ul>
   </div>
