--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div id="main">
-    <h1>Basic Stuff</h1>
-    <p>More stuff will be added to here (I don't know how soon, though).</p>
+    <h1>My Stuff</h1>
+    <p>More things will be added to here (I don't know how soon, though).</p>
     <p>This is where I put games that can't be published on Scratch, or other random things.</p>
     <ul>
       <li><a href="https://scratch.mit.edu/users/fractioneater">My Scratch profile</a></li>
