--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="header">
+    <h1>Home</h1>
+    <p>fractioneater.github.io</p>
+  </div>
   <div id="main">
     <h1>My Stuff</h1>
     <p>More things will be added to here (I don't know how soon, though).</p>
