Edit sections, add number-grid link

--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
     <p>fractioneater.github.io</p>
   </div>
   <div id="main">
-    <h1>My Stuff</h1>
-    <p>More things will be added to here (I don't know how soon, though).</p>
-    <p>This is where I put games that can't be published on Scratch, or other random things.</p>
+    <h2>Links</h2>
+    <p>Here are some links to my accounts.</p>
     <ul>
       <li><a href="https://scratch.mit.edu/users/fractioneater">My Scratch profile</a></li>
       <li><a href="https://scratch.mit.edu/users/mushroom62">My old Scratch profile</a></li>
-      <li><a href="https://fractioneater.github.io/battle-bound">Battle Bound</a></li>
+      <li><a href="https://github.com/fractioneater">My github profile</a></li>
+    </ul>
+    <h2>Projects</h2>
+    <p>These are projects I've made. Well, I made most of them.</p>
+    <ul>
+      <li>
+        <a href="https://fractioneater.github.io/battle-bound">Battle Bound</a>
+        <p>This game was originally made by</p>
+        <a href="https://scratch.mit.edu/users/KIKOKO_">@KIKOKO_</a>
+        <p>and brought to the web by me.</p>
+      </li>
+      <li><a href="https://fractioneater.github.io/number-grid"></a>Number Grid</li>
     </ul>
   </div>
 </body>
