Fix number-grid link, change h2 font weight, fix battle bound credits

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <ul>
       <li>
         <a href="https://fractioneater.github.io/battle-bound">Battle Bound</a>
-        <p>This game was originally made by</p>
+        <p>This game was originally made by
         <a href="https://scratch.mit.edu/users/KIKOKO_">@KIKOKO_</a>
-        <p>and brought to the web by me.</p>
+        and brought to the web by me.</p>
       </li>
-      <li><a href="https://fractioneater.github.io/number-grid"></a>Number Grid</li>
+      <li><a href="https://fractioneater.github.io/number-grid">Number Grid</a></li>
     </ul>
   </div>
 </body>
