Fix a lot of stuff

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <div class="header">
-    <h1>Home</h1>
-    <p>fractioneater.github.io</p>
+    <h1 class="title">Home</h1>
+    <p class="subtitle">fractioneater.github.io</p>
   </div>
-  <div id="main">
+  <div id="main" class="align-left">
     <h2>Links</h2>
-    <p>Here are some links to my accounts.</p>
+    <p>Here are some links to my accounts:</p>
     <ul>
       <li><a href="https://scratch.mit.edu/users/fractioneater">My Scratch profile</a></li>
       <li><a href="https://scratch.mit.edu/users/mushroom62">My old Scratch profile</a></li>
