--- a/404.html
+++ b/404.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Home - fractioneater</title>
+  <title>404 - page not found</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div class="header">
-    <h1>404</h1>
-    <p>probably not what you're looking for</p>
+    <h1 class="title">404</h1>
+    <p class="subtitle">the page you're looking for doesn't exist</p>
   </div>
-  <div id="center">
+  <div class="align-center">
     <h2>Main Page</h2>
     <p>(back to the home page)</p>
     <a href="https://fractioneater.github.io/">https://fractioneater.github.io/</a>
