--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>404 Error - Page Not Found</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="fractioneater.github.io/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="header">
