--- a/404.html
+++ b/404.html
@@ -3,7 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <title>404 Error - Page Not Found</title>
-  <link href="fractioneater.github.io/style.css" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap');
+
+    body {
+      font-family: "Fira Sans", Helvetica, sans-serif;
+      margin: 0;
+      -moz-text-size-adjust: none;
+      -webkit-text-size-adjust: none;
+      text-size-adjust: none;
+    }
+    .header {
+      padding: 20px;
+      text-align: center;
+    }
+    .title {
+      font-size: 48px;
+      font-weight: 450;
+    }
+    .subtitle {
+      font-size: 24px;
+      font-weight: 300;
+    }
+    .align-center {
+      max-width: 60%;
+      padding-top: 30px;
+      text-align: center;
+      margin: auto;
+    }
+    h2 {font-weight: 500;}
+    p {font-weight: 300;}
+    a {
+      font-weight: 400;
+      text-decoration: none;
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+        background: #e2e9f1;
+        color: #000000;
+      }
+      a:link {color: #1579cb;}
+      a:hover {color: #3595e3;}
+      a:visited {color: #7e32da;}
+      a:active {color: #3b42ca;}
+      .header {
+        background: #3d7ebb;
+        color: #ffffff;  
+      }
+    }
+
+    @media (prefers-color-scheme: dark) { 
+      body {
+        background: #17202c;
+        color: #ffffff;
+      }
+      a:link {color: #3f9be6;}
+      a:hover {color: #5fb1f4;}
+      a:visited {color: #b377fc;}
+      a:active {color: #757bf3;}
+      .header {
+        background: #21598d;
+        color: #ffffff;  
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="header">
