--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
       } else {
         let poppedMatch = "fractioneater.github.io";
       }
+      console.log(poppedMatch);
       while (popped != poppedMatch) {
         popped = url.pop();
         u.push(popped);
