--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <p>These are projects I've made. Well, I made most of them.</p>
     <ul>
       <li>
+        <a href="https://fractioneater.github.io/flicker">Flicker</a>
+        <p>An easy to use, python-like programming language that I am working on.</p>
+      </li>
+      <li>
         <a href="https://fractioneater.github.io/battle-bound">Battle Bound</a>
         <p>This game was originally made by
         <a href="https://scratch.mit.edu/users/KIKOKO_">@KIKOKO_</a>
