--- a/flicker/index.html
+++ b/flicker/index.html
@@ -6,15 +6,18 @@
   <link href="/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="header">
+    <h1 class="title">Flicker</h1>
+    <p class="subtitle">fractioneater.github.io</p>
+  </div>
   <div id="main" class="align-left">
     <h2>Flicker</h2>
     <p>Flicker is a small, dynamically typed language that I am in the process of making.</p>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
     <pre>
       <code>
-        var i = 0     <br>
-                      <br>
-        if (i == 5)   <br>
+        var i = 0
+        if (i == 5)
           print "five"
       </code>
     </pre>
