--- a/flicker/index.html
+++ b/flicker/index.html
@@ -15,7 +15,7 @@
     <p>Flicker is a small, dynamically typed language that I am in the process of making.</p>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
     <pre>
-      <code class="monospace">
+      <code>
         var i = 0
 
         if (i == 5)
