--- a/flicker/index.html
+++ b/flicker/index.html
@@ -14,14 +14,10 @@
     <h2>Flicker</h2>
     <p>Flicker is a small, dynamically typed language that I am in the process of making.</p>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
-    <pre>
-      <code>
-        var i = 0
-
-        if (i == 5)
-          print "five"
-      </code>
-    </pre>
+<pre><code><span>var i = 4</span>
+<span></span>
+<span>if (i == 3)</span>
+<span>  print "three"</span></code></pre>
   </div>
 </body>
 </html>
