Add room for scrolling

--- a/flicker/index.html
+++ b/flicker/index.html
@@ -17,7 +17,8 @@
 <pre><code><span>var i = 4</span>
 <span></span>
 <span>if (i == 3)</span>
-<span>  print "three"</span></code></pre>
+  <span>print "three"</span>
+</code></pre>
   </div>
 </body>
 </html>
