--- a/flicker/index.html
+++ b/flicker/index.html
@@ -14,10 +14,10 @@
     <h2>Flicker</h2>
     <p>Flicker is a small, dynamically typed language that I am in the process of making.</p>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
-<pre><code><span>var i = 4</span>
+<pre><code><span class="h-keyword">var</span><span> i</span><span class="h-operator"> =</span><span class="h-number"> 4</span>
 <span></span>
-<span>if (i == 3)</span>
-  <span>print "three"</span>
+<span class="h-keyword">if</span><span> (i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span><span>)</span>
+  <span class="h-keyword">print</span><span class="h-string"> "three"</span>
 </code></pre>
   </div>
 </body>
