--- a/flicker/index.html
+++ b/flicker/index.html
@@ -16,7 +16,7 @@
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
 <pre><code><span class="h-keyword">var</span><span> i</span><span class="h-operator"> =</span><span class="h-number"> 4</span>
 <span></span>
-<span class="h-keyword">if</span><span class="h-operator"> (</span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span><span class="h-operator">)</span>
+<span class="h-keyword">if</span><span class="h-function"> (</span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span><span class="h-function">)</span>
   <span class="h-keyword">print</span><span class="h-string"> "three"</span>
 </code></pre>
   </div>
