One more commit

--- a/flicker/index.html
+++ b/flicker/index.html
@@ -19,6 +19,7 @@
 <span class="h-keyword">if</span><span class="h-function"> (</span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span><span class="h-function">)</span>
   <span class="h-keyword">print</span><span class="h-string"> "three"</span>
 </code></pre>
+    <p>This page is just a beginning, so you'll see more here once I'm satisfied with Flicker itself.</p>
   </div>
 </body>
 </html>
