Add more to example

--- a/flicker/index.html
+++ b/flicker/index.html
@@ -16,8 +16,15 @@
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
 <pre><code><span class="h-keyword">var</span><span> i</span><span class="h-operator"> =</span><span class="h-number"> 4</span>
 <span></span>
-<span class="h-keyword">if</span><span class="h-function"> (</span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span><span class="h-function">)</span>
+<span class="h-keyword">if </span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span>
   <span class="h-keyword">print</span><span class="h-string"> "three"</span>
+<span></span>
+<span class="h-keyword">class</span><span class="h-class"> Test</span>
+  <span class="h-function">init(</span><span class="h-operator">+</span><span>property</span><span class="h-function">)</span>
+    <span class="h-keyword">print</span><span class="h-string"> "initializing instance"</span>
+  <span></span>
+  <span class="h-function">getProperty()</span>
+    <span class="h-keyword">return</span><span class="h-class"> this</span><span class="h-operator">.</span><span>property</span>
 </code></pre>
     <p>This page is just a beginning, so you'll see more here once I'm satisfied with Flicker itself.</p>
   </div>
