Add even more code

--- a/flicker/index.html
+++ b/flicker/index.html
@@ -25,6 +25,8 @@
   <span></span>
   <span class="h-function">getProperty()</span>
     <span class="h-keyword">return</span><span class="h-class"> this</span><span class="h-operator">.</span><span>property</span>
+<span></span>
+<span class="h-keyword">print</span><span class="h-class"> Test(</span><span class="h-number">49.202</span><span class="h-class">)</span><span class="h-operator">.</span><span class="h-function">getProperty()</span>
 </code></pre>
     <p>This page is just a beginning, so you'll see more here once I'm satisfied with Flicker itself.</p>
   </div>
