Looks better this way

--- a/flicker/index.html
+++ b/flicker/index.html
@@ -27,6 +27,7 @@
     <span class="h-keyword">return</span><span class="h-class"> this</span><span class="h-operator">.</span><span>property</span>
 <span></span>
 <span class="h-keyword">print</span><span class="h-class"> Test(</span><span class="h-number">49.202</span><span class="h-class">)</span><span class="h-operator">.</span><span class="h-function">getProperty()</span>
+<span></span>
 <span class="h-comment"># output:</span>
 <span class="h-comment"># initializing instance</span>
 <span class="h-comment"># 49.202</span>
