Make links relative, attempt to do some syntax highlighting

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>404 Error - Page Not Found</title>
   <link href="/style.css" rel="stylesheet">
 </head>
@@ -42,7 +42,7 @@
   <div class="align-center">
     <p></p>
     <p>Well, there's not much you can do here.</p>
-    <a href="https://fractioneater.github.io/">back to the home page</a>
+    <a href="/">back to the home page</a>
   </div>
 </body>
 </html>
