--- a/flicker/core/index.html
+++ b/flicker/core/index.html
@@ -30,9 +30,28 @@
     <ul>
       <li><a href="../">Main Page</a></li>
     </ul>
+    <section>
+      <h2>Classes</h2>
+      <ul>
+        <li><a href="./">Bool</a></li>
+        <li><a href="./">BoundMethod</a></li>
+        <li><a href="./">Class</a></li>
+        <li><a href="./">Function</a></li>
+        <li><a href="./">List</a></li>
+        <li><a href="./">Map</a></li>
+        <li><a href="./">None</a></li>
+        <li><a href="./">Number</a></li>
+        <li><a href="./">Object</a></li>
+        <li><a href="./">Random</a></li>
+        <li><a href="./">Range</a></li>
+        <li><a href="./">Sequence</a></li>
+        <li><a href="./">String</a></li>
+        <li><a href="./">Sys</a></li>
+      </ul>
+    </section>
   </nav>
   <main>
-    <h2>Standard Library</h2>
+    <h2>Core Library</h2>
     <hr>
   </main>
 </div>
