--- a/flicker/index.html
+++ b/flicker/index.html
@@ -40,7 +40,7 @@
     <section>
       <h2>Api Reference</h2>
       <ul>
-        <li><a href="./core">Standard Library</a></li>
+        <li><a href="./core">Core Library</a></li>
       </ul>
     </section>
   </nav>
@@ -48,6 +48,9 @@
     <h2>Flicker is a small, dynamically typed scripting language</h2>
     <hr>
     <p>Instead of listening to me talk about it, why don't I show you some code:</p>
+    <!-- <div id="example-code"></div>
+    <script src="https://cdn.jsdelivr.net/npm/shiki"></script>
+    <script type="module" src="./shiki.js"></script> -->
 <pre><code><span class="h-keyword">var</span><span> i</span><span class="h-operator"> =</span><span class="h-number"> 4</span>
 <span></span>
 <span class="h-keyword">if </span><span>i</span><span class="h-operator"> ==</span><span class="h-number"> 3</span>
@@ -64,8 +67,7 @@
 <span></span>
 <span class="h-comment"># output:</span>
 <span class="h-comment"># initializing instance</span>
-<span class="h-comment"># 49.202</span>
-</code></pre>
+<span class="h-comment"># 49.202</span></code></pre>      
     <p>This page is just a beginning, so you'll see more here once I'm satisfied with Flicker itself.</p>
   </main>  
 </div>
